<resources>
    <string name="app_name">College_Navigator_1.0</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorites</string>
    <string name="account">Account</string>

    <string name="mystring">mystring</string>

    <string name="Space_stn"> </string>

    <!--///// College Page///////////-->
    <string name="SAT_accepted">Your SAT Score is higher than the Schools Average SAT Score </string>
    <string name="instate_outstate_tuition">Instate \nOutState Tuition</string>
    <string name="logout">Log Out</string>



    <!--///// Acoount Page///////////-->
    <string name="Name">Name </string>
    <string name="emailaddress">Email Address </string>
    <string name="Dialog_string">Change TextView to?</string>
    <string name="Cancel">Cancel</string>
    <string name="Change">Change</string>
    <string name="hint_Account_dialog">New Name</string>
    <string name="choose_image">Choose \nImage</string>


    <!--///// Welcome Page///////////-->
    <string name="WelcomeTitle">College Navigator</string>
    <string name="WelcomeButtonstring">Let\'s Begin</string>
    <string name="Download_str">Download Latest Information</string>
    <string name="WelcomeSubtitle">Search for Any school and
 Find the right School for you </string>


    <!--///// Log In Page///////////-->
    <string name="LogIn_str">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="NoAccount"><u>Don\'t have an account? Sign Up</u></string>
    <string name="Guest">Countinue As a Guest</string>


    <!--///// Register Page///////////-->
    <string name="Register_str">Register</string>
    <string name="Email_str">Email</string>
    <string name="Math_SAT_str">Math SAT Score</string>
    <string name="Reading_SAT_str">Reading SAT Score</string>


    <!--///// Search page///////////-->
    <string name="Search_For_College">Search For a College</string>
    <string name="NameofSchool">Name Of School:</string>
    <string name="AdvancedSearch"><u>Advanced Search</u></string>
    <string name="Search">Search</string>
    <string name="States">States:</string>
    <string name="NoPreference">No Preference</string>
    <string name="Programs_Majors">Programs/Majors:</string>

    <string name="Level_Award">Level of Award</string>
    <string name="Certificate">Certificate</string>
    <string name="Associate">Associate\'s</string>
    <string name="Bachelor">Bachelor\'s</string>
    <string name="Advanced">Advanced</string>
    <string name="Tuition">Tuition:</string>

    <!--///// Results page///////////-->
    <string name="Results">Results</string>
    <string name="SchoolNamestr">School Name</string>
    <string name="SchoolStatetr">School State</string>
    <string name="SchoolTutionInstate">School instate Tuition</string>
    <string name="SchoolTutionOutstate">School out-state Tuition</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
