<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.account.account">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="164dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"


        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_bottom_imageView_Account_Page" />

    <TextView
        android:id="@+id/username_Account_Page"
        android:layout_width="164dp"
        android:layout_height="65dp"


        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintStart_toEndOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"

        android:background="@color/white"


        android:gravity="center"
        android:text="@string/Reading_SAT_str"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/password_Account_Page"
        android:layout_width="164dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"

        android:background="@color/white"


        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/SAT_math_Account_Page" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="164dp"
        android:layout_height="65dp"
        android:layout_marginStart="52dp"

        android:layout_marginTop="20dp"


        android:background="@color/white"
        android:gravity="center"
        android:text="@string/Password"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"

        android:background="@color/white"


        android:gravity="center"
        android:text="@string/emailaddress"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/email_Account_Page"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"

        android:gravity="center"


        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/username_Account_Page" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"

        android:background="@color/white"


        android:gravity="center"
        android:text="@string/Math_SAT_str"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/SAT_math_Account_Page"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"

        android:gravity="center"


        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/SAT_reading_Account_Page" />

    <TextView
        android:id="@+id/SAT_reading_Account_Page"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"

        android:gravity="center"


        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/email_Account_Page" />

    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/red_btn_customized"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="112dp"
        android:contentDescription="@string/mystring"
        app:layout_constraintBottom_toTopOf="@+id/username_bottom_imageView_Account_Page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        app:srcCompat="@drawable/account_logo" />

    <Button
        android:id="@+id/choose_btn_Account_Page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_image"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_bottom_imageView_Account_Page"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="216dp"
        android:gravity="center"

        android:text="@string/Username"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>